--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ts to-do list - front-end - API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "tsc -w"
   },
   "repository": {
     "type": "git",
