--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0"
   }
 }
