--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "nodemon ./index",
-    "build": ""
+    "start-server": "nodemon SRC/API/index.js",
+    "build": "webpack --config webpack.config.prod.js",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -30,13 +31,8 @@
     "nodemon": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  },
-  "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0"
+    "webpack-cli": "^3.3.11"
   }
 }
