--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
   },
   "homepage": "https://github.com/Mike-Matt/TS-CRUD#readme",
   "dependencies": {
-    "@types/express": "^4.17.3",
-    "@types/node": "^13.9.5",
-    "@types/react": "^16.9.27",
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2",
+    "body-parser": "^1.19.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "webpack": "^4.42.1"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "webpack-cli": "^3.3.11",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "nodemon": "^2.0.2",
+    "@types/express": "^4.17.3",
+    "@types/node": "^13.9.5",
+    "@types/react": "^16.9.27"
   }
 }
